--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,12 @@
 
 .exo2 {
   font-family: 'Exo 2', sans-serif;
-  font-style: italic;
 }
 
+.exo2-italic {
+  font-family: 'Exo 2', sans-serif;
+  font-style: italic;
+}
 .trans-bg {
   background-color: hsl(220, 13%, 91%, 0.3);
 }
