--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .main-container {
   max-width: 90%;
-  margin: 0 auto; /* Centers the container horizontally */
+  margin: 0 auto;
+  /* Centers the container horizontally */
 }
 
 .gold {
@@ -10,6 +11,7 @@
 .bg-gold {
   background-color: #AEA37D;
 }
+
 .orbitron {
   font-family: 'Orbitron', sans-serif;
 }
@@ -60,7 +62,18 @@
 
 .clipped-img-left {
   clip-path: polygon(0 0, 90% 0, 62% 100%, 0% 100%);
-    overflow: hidden;
+  overflow: hidden;
   width: 100%;
 }
 
+.embla {
+  overflow: hidden;
+}
+.embla__container {
+  display: flex;
+}
+.embla__slide {
+  flex: 0 0 20%;
+  min-width: 0;
+  padding: 1rem;
+}
