--- a/output.css
+++ b/output.css
@@ -596,12 +596,20 @@ video {
   right: -0.5rem;
 }
 
+.bottom-4 {
+  bottom: 1rem;
+}
+
 .left-0 {
   left: 0px;
 }
 
 .left-1\/2 {
   left: 50%;
+}
+
+.left-4 {
+  left: 1rem;
 }
 
 .top-0 {
@@ -657,6 +665,10 @@ video {
   margin-right: auto;
 }
 
+.-mb-1 {
+  margin-bottom: -0.25rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -693,18 +705,6 @@ video {
   margin-top: auto;
 }
 
-.mt-0 {
-  margin-top: 0px;
-}
-
-.mt-0\.5 {
-  margin-top: 0.125rem;
-}
-
-.-mb-1 {
-  margin-bottom: -0.25rem;
-}
-
 .flex {
   display: flex;
 }
@@ -717,8 +717,8 @@ video {
   display: none;
 }
 
-.h-1\/2 {
-  height: 50%;
+.h-10 {
+  height: 2.5rem;
 }
 
 .h-16 {
@@ -749,12 +749,20 @@ video {
   height: 2rem;
 }
 
-.h-\[24rem\] {
+.h-96 {
   height: 24rem;
 }
 
-.h-\[350px\] {
-  height: 350px;
+.h-\[185px\] {
+  height: 185px;
+}
+
+.h-\[240px\] {
+  height: 240px;
+}
+
+.h-\[24rem\] {
+  height: 24rem;
 }
 
 .h-\[800px\] {
@@ -769,32 +777,12 @@ video {
   height: 100vh;
 }
 
-.h-\[180px\] {
-  height: 180px;
+.h-\[780px\] {
+  height: 780px;
 }
 
-.h-\[220px\] {
-  height: 220px;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
-.h-\[240px\] {
-  height: 240px;
-}
-
-.h-\[140px\] {
-  height: 140px;
-}
-
-.h-\[260px\] {
-  height: 260px;
-}
-
-.h-\[185px\] {
-  height: 185px;
+.h-\[700px\] {
+  height: 700px;
 }
 
 .min-h-\[36rem\] {
@@ -803,6 +791,10 @@ video {
 
 .min-h-\[40rem\] {
   min-height: 40rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-4 {
@@ -825,6 +817,10 @@ video {
   width: 32rem;
 }
 
+.w-\[82\%\] {
+  width: 82%;
+}
+
 .w-\[90\%\] {
   width: 90%;
 }
@@ -835,6 +831,10 @@ video {
 
 .w-px {
   width: 1px;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .max-w-5xl {
@@ -863,6 +863,17 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-scale-x-100 {
+  --tw-scale-x: -1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -871,6 +882,10 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+
+.resize {
+  resize: both;
 }
 
 .grid-cols-1 {
@@ -1046,14 +1061,19 @@ video {
   border-color: rgb(255 255 255 / 0.1);
 }
 
+.bg-\[\#1e2a32\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 42 50 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#29343D\] {
   --tw-bg-opacity: 1;
   background-color: rgb(41 52 61 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#2E3A44\] {
+.bg-\[\#36434F\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(46 58 68 / var(--tw-bg-opacity));
+  background-color: rgb(54 67 79 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#F4F3ED\] {
@@ -1107,17 +1127,8 @@ video {
   background-color: rgb(255 255 255 / 0.9);
 }
 
-.bg-\[\#36434F\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(54 67 79 / var(--tw-bg-opacity));
-}
-
-.bg-\[29343D\] {
-  background-color: 29343D;
-}
-
-.bg-opacity-10 {
-  --tw-bg-opacity: 0.1;
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
 }
 
 .bg-\[url\(\'https\:\/\/img\.cdn\.dragon2000\.net\/C2846\/U737\/IMG_34372-medium\.jpg\'\)\] {
@@ -1154,24 +1165,14 @@ video {
      object-fit: cover;
 }
 
-.object-center {
-  -o-object-position: center;
-     object-position: center;
-}
-
-.object-\[center_-20px\] {
-  -o-object-position: center -20px;
-     object-position: center -20px;
-}
-
-.object-\[center_-90px\] {
-  -o-object-position: center -90px;
-     object-position: center -90px;
-}
-
 .object-\[center_-110px\] {
   -o-object-position: center -110px;
      object-position: center -110px;
+}
+
+.object-center {
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-2 {
@@ -1186,14 +1187,14 @@ video {
   padding: 1.5rem;
 }
 
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .px-6 {
@@ -1209,6 +1210,11 @@ video {
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-20 {
@@ -1236,19 +1242,8 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+.pb-16 {
+  padding-bottom: 4rem;
 }
 
 .pb-4 {
@@ -1267,6 +1262,10 @@ video {
   padding-left: 1.5rem;
 }
 
+.pt-12 {
+  padding-top: 3rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -1283,28 +1282,12 @@ video {
   padding-top: 2rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
+.pt-20 {
+  padding-top: 5rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-24 {
-  padding-top: 6rem;
-}
-
-.pt-12 {
-  padding-top: 3rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-left {
@@ -1322,6 +1305,16 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl {
@@ -1349,18 +1342,12 @@ video {
   line-height: 1rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
@@ -1369,10 +1356,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .uppercase {
@@ -1387,20 +1370,16 @@ video {
   letter-spacing: .25em;
 }
 
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
-
-.tracking-widest {
-  letter-spacing: 0.1em;
-}
-
 .tracking-\[0\.2em\] {
   letter-spacing: 0.2em;
 }
 
 .tracking-\[0\.4em\] {
   letter-spacing: 0.4em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 
 .text-\[\#111\] {
@@ -1451,11 +1430,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -1540,6 +1514,10 @@ video {
   transition-duration: 200ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .duration-700 {
   transition-duration: 700ms;
 }
@@ -1600,6 +1578,10 @@ video {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.group:hover .group-hover\:bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
 }
 
 .group:hover .group-hover\:opacity-50 {
